Mon Aug 11 21:20:50 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

          Recover from missing end_historic_samples message and resume
          sample processing.

Sat Aug  9 18:20:37 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:

          Fuzz fix.

Fri Aug  8 22:23:33 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Restore durable history processing, detect RTPS_UDP and ignore.

        * dds/DCPS/transport/framework/TransportClient.h:

          Make add_link() virtual.

        * dds/DCPS/transport/framework/TransportImpl.h:

          Make transport_type() protected.

        * tests/DCPS/PersistentInfoRepo:

          Set svn:ignore

        * tests/DCPS/TransientLocalTest/DataReaderListener.cpp:

          Log using thread/PID and ACE_DEBUG.

        * tests/DCPS/TransientLocalTest/run_test.pl:

          Remove extra logging of subscriber command line.

Thu Aug  7 17:09:50 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Include RtpsDiscover.h in static builds.

Wed Aug  6 18:41:21 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Fixed for wchar builds.

Wed Aug  6 14:46:33 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/Utils/DataReaderListenerImpl.h:

          Fix compile error (hopefully)

Wed Aug  6 14:21:41 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tests/DCPS/ManyToMany/run_test.pl:

          Replaced uses of perl feature 'say' with simple print to
          file statements for older version support.
