@@ -1,3 +1,10 @@
+Tue Aug 12 15:01:54 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.cpp:
+
+          Properly retain timer for end_historic_samples cleanup, and 
+          handle when not cancelled.
+
 Mon Aug 11 21:20:50 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.h:
